--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -13,7 +13,7 @@
     <p><a href="/login">Go to Login</a></p>
     {% else %}
     <p>Enter your new password for <strong>{{ callsign }}</strong>.</p>
-    <form method="POST" id="reset-form">
+    <form method="POST" id="reset-form" data-loading>
         <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
         <div class="form-group">
             <label for="password">New Password</label>
